// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for CropPlan with regrowth create a CropPlan 1`] = `
"{
  \\"crop\\": {
    \\"buy\\": 700,
    \\"harvest\\": {},
    \\"id\\": \\"ancient_fruit\\",
    \\"name\\": \\"Ancient Fruit\\",
    \\"sell\\": 550,
    \\"growth\\": 28,
    \\"regrowth\\": 7,
    \\"start\\": 0,
    \\"end\\": 83
  },
  \\"fertilizer\\": {
    \\"buy\\": 0,
    \\"id\\": \\"none\\",
    \\"name\\": \\"None\\"
  },
  \\"quantity\\": 1,
  \\"start_date\\": 0,
  \\"end_date\\": 83
}"
`;

exports[`Tests for CropPlan with regrowth get actions for year 1`] = `
Array [
  Array [
    Object {
      "crop": Object {
        "buy": 700,
        "end": 83,
        "growth": 28,
        "harvest": Object {},
        "id": "ancient_fruit",
        "name": "Ancient Fruit",
        "regrowth": 7,
        "sell": 550,
        "start": 0,
      },
      "id": "plant-ancient_fruit",
      "quantity": 1,
      "type": "plant",
    },
  ],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [
    Object {
      "crop": Object {
        "buy": 700,
        "end": 83,
        "growth": 28,
        "harvest": Object {},
        "id": "ancient_fruit",
        "name": "Ancient Fruit",
        "regrowth": 7,
        "sell": 550,
        "start": 0,
      },
      "id": "harvest-ancient_fruit",
      "quantity": 1,
      "type": "harvest",
    },
  ],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [
    Object {
      "crop": Object {
        "buy": 700,
        "end": 83,
        "growth": 28,
        "harvest": Object {},
        "id": "ancient_fruit",
        "name": "Ancient Fruit",
        "regrowth": 7,
        "sell": 550,
        "start": 0,
      },
      "id": "harvest-ancient_fruit",
      "quantity": 1,
      "type": "harvest",
    },
  ],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [
    Object {
      "crop": Object {
        "buy": 700,
        "end": 83,
        "growth": 28,
        "harvest": Object {},
        "id": "ancient_fruit",
        "name": "Ancient Fruit",
        "regrowth": 7,
        "sell": 550,
        "start": 0,
      },
      "id": "harvest-ancient_fruit",
      "quantity": 1,
      "type": "harvest",
    },
  ],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [
    Object {
      "crop": Object {
        "buy": 700,
        "end": 83,
        "growth": 28,
        "harvest": Object {},
        "id": "ancient_fruit",
        "name": "Ancient Fruit",
        "regrowth": 7,
        "sell": 550,
        "start": 0,
      },
      "id": "harvest-ancient_fruit",
      "quantity": 1,
      "type": "harvest",
    },
  ],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [
    Object {
      "crop": Object {
        "buy": 700,
        "end": 83,
        "growth": 28,
        "harvest": Object {},
        "id": "ancient_fruit",
        "name": "Ancient Fruit",
        "regrowth": 7,
        "sell": 550,
        "start": 0,
      },
      "id": "harvest-ancient_fruit",
      "quantity": 1,
      "type": "harvest",
    },
  ],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [
    Object {
      "crop": Object {
        "buy": 700,
        "end": 83,
        "growth": 28,
        "harvest": Object {},
        "id": "ancient_fruit",
        "name": "Ancient Fruit",
        "regrowth": 7,
        "sell": 550,
        "start": 0,
      },
      "id": "harvest-ancient_fruit",
      "quantity": 1,
      "type": "harvest",
    },
  ],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [
    Object {
      "crop": Object {
        "buy": 700,
        "end": 83,
        "growth": 28,
        "harvest": Object {},
        "id": "ancient_fruit",
        "name": "Ancient Fruit",
        "regrowth": 7,
        "sell": 550,
        "start": 0,
      },
      "id": "harvest-ancient_fruit",
      "quantity": 1,
      "type": "harvest",
    },
  ],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [
    Object {
      "crop": Object {
        "buy": 700,
        "end": 83,
        "growth": 28,
        "harvest": Object {},
        "id": "ancient_fruit",
        "name": "Ancient Fruit",
        "regrowth": 7,
        "sell": 550,
        "start": 0,
      },
      "id": "harvest-ancient_fruit",
      "quantity": 1,
      "type": "harvest",
    },
  ],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
]
`;

exports[`Tests for CropPlan with regrowth get harvest action 1`] = `
Array [
  Object {
    "crop": Object {
      "buy": 700,
      "end": 83,
      "growth": 28,
      "harvest": Object {},
      "id": "ancient_fruit",
      "name": "Ancient Fruit",
      "regrowth": 7,
      "sell": 550,
      "start": 0,
    },
    "id": "harvest-ancient_fruit",
    "quantity": 1,
    "type": "harvest",
  },
]
`;

exports[`Tests for CropPlan with regrowth get plant action 1`] = `
Array [
  Object {
    "crop": Object {
      "buy": 700,
      "end": 83,
      "growth": 28,
      "harvest": Object {},
      "id": "ancient_fruit",
      "name": "Ancient Fruit",
      "regrowth": 7,
      "sell": 550,
      "start": 0,
    },
    "id": "plant-ancient_fruit",
    "quantity": 1,
    "type": "plant",
  },
]
`;

exports[`Tests for CropPlan with replant create a CropPlan 1`] = `
"{
  \\"crop\\": {
    \\"buy\\": 80,
    \\"harvest\\": {},
    \\"id\\": \\"cauliflower\\",
    \\"name\\": \\"Cauliflower\\",
    \\"sell\\": 175,
    \\"growth\\": 12,
    \\"start\\": 0,
    \\"end\\": 27
  },
  \\"fertilizer\\": {
    \\"buy\\": 0,
    \\"id\\": \\"none\\",
    \\"name\\": \\"None\\"
  },
  \\"quantity\\": 1,
  \\"start_date\\": 1,
  \\"end_date\\": 27
}"
`;

exports[`Tests for CropPlan with replant get actions for month 1`] = `
Array [
  Array [],
  Array [
    Object {
      "crop": Object {
        "buy": 80,
        "end": 27,
        "growth": 12,
        "harvest": Object {},
        "id": "cauliflower",
        "name": "Cauliflower",
        "sell": 175,
        "start": 0,
      },
      "id": "plant-cauliflower",
      "quantity": 1,
      "type": "plant",
    },
  ],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [
    Object {
      "crop": Object {
        "buy": 80,
        "end": 27,
        "growth": 12,
        "harvest": Object {},
        "id": "cauliflower",
        "name": "Cauliflower",
        "sell": 175,
        "start": 0,
      },
      "id": "plant-cauliflower",
      "quantity": 1,
      "type": "plant",
    },
    Object {
      "crop": Object {
        "buy": 80,
        "end": 27,
        "growth": 12,
        "harvest": Object {},
        "id": "cauliflower",
        "name": "Cauliflower",
        "sell": 175,
        "start": 0,
      },
      "id": "harvest-cauliflower",
      "quantity": 1,
      "type": "harvest",
    },
  ],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [
    Object {
      "crop": Object {
        "buy": 80,
        "end": 27,
        "growth": 12,
        "harvest": Object {},
        "id": "cauliflower",
        "name": "Cauliflower",
        "sell": 175,
        "start": 0,
      },
      "id": "harvest-cauliflower",
      "quantity": 1,
      "type": "harvest",
    },
  ],
  Array [],
  Array [],
]
`;

exports[`Tests for CropPlan with replant get harvest action 1`] = `
Array [
  Object {
    "crop": Object {
      "buy": 80,
      "end": 27,
      "growth": 12,
      "harvest": Object {},
      "id": "cauliflower",
      "name": "Cauliflower",
      "sell": 175,
      "start": 0,
    },
    "id": "plant-cauliflower",
    "quantity": 1,
    "type": "plant",
  },
  Object {
    "crop": Object {
      "buy": 80,
      "end": 27,
      "growth": 12,
      "harvest": Object {},
      "id": "cauliflower",
      "name": "Cauliflower",
      "sell": 175,
      "start": 0,
    },
    "id": "harvest-cauliflower",
    "quantity": 1,
    "type": "harvest",
  },
]
`;

exports[`Tests for CropPlan with replant get plant action 1`] = `
Array [
  Object {
    "crop": Object {
      "buy": 80,
      "end": 27,
      "growth": 12,
      "harvest": Object {},
      "id": "cauliflower",
      "name": "Cauliflower",
      "sell": 175,
      "start": 0,
    },
    "id": "plant-cauliflower",
    "quantity": 1,
    "type": "plant",
  },
]
`;

exports[`Tests for CropPlan with replant get plant and harvest action 1`] = `
Array [
  Object {
    "crop": Object {
      "buy": 80,
      "end": 27,
      "growth": 12,
      "harvest": Object {},
      "id": "cauliflower",
      "name": "Cauliflower",
      "sell": 175,
      "start": 0,
    },
    "id": "plant-cauliflower",
    "quantity": 1,
    "type": "plant",
  },
  Object {
    "crop": Object {
      "buy": 80,
      "end": 27,
      "growth": 12,
      "harvest": Object {},
      "id": "cauliflower",
      "name": "Cauliflower",
      "sell": 175,
      "start": 0,
    },
    "id": "harvest-cauliflower",
    "quantity": 1,
    "type": "harvest",
  },
]
`;

exports[`Tests for simple CropPlan create a CropPlan 1`] = `
"{
  \\"crop\\": {
    \\"buy\\": 30,
    \\"harvest\\": {},
    \\"id\\": \\"blue_jazz\\",
    \\"name\\": \\"Blue Jazz\\",
    \\"sell\\": 50,
    \\"growth\\": 7,
    \\"start\\": 0,
    \\"end\\": 27
  },
  \\"fertilizer\\": {
    \\"buy\\": 0,
    \\"id\\": \\"none\\",
    \\"name\\": \\"None\\"
  },
  \\"quantity\\": 1,
  \\"start_date\\": 0,
  \\"end_date\\": 7
}"
`;

exports[`Tests for simple CropPlan get actions for month 1`] = `
Array [
  Array [
    Object {
      "crop": Object {
        "buy": 30,
        "end": 27,
        "growth": 7,
        "harvest": Object {},
        "id": "blue_jazz",
        "name": "Blue Jazz",
        "sell": 50,
        "start": 0,
      },
      "id": "plant-blue_jazz",
      "quantity": 1,
      "type": "plant",
    },
  ],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [
    Object {
      "crop": Object {
        "buy": 30,
        "end": 27,
        "growth": 7,
        "harvest": Object {},
        "id": "blue_jazz",
        "name": "Blue Jazz",
        "sell": 50,
        "start": 0,
      },
      "id": "harvest-blue_jazz",
      "quantity": 1,
      "type": "harvest",
    },
  ],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
]
`;
